[package]
name = "news"
version = "0.3.0"
authors = ["Justin Grant <justin@tpfs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
threadpool = "1.8.*"
