[package]
name = "news"
version = "0.3.0"
authors = ["Justin Grant <justin@tpfs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
futures = {version = "0.3" }
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }
